--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -49,7 +49,7 @@ table {
 /* Set every element's box-sizing to border-box */
 * {
 	box-sizing: border-box;
-	border:1px solid black;
+	border:1px solid red;
 }
 
 html, body {
@@ -64,3 +64,8 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
+h1{
+	font-size: 30px;
+
+}
